--- a/src/app/views/curriculos/curriculos.component.html
+++ b/src/app/views/curriculos/curriculos.component.html
@@ -1,6 +1,12 @@
 <section>
 <h2>nome:</h2>
 <input type="text" placeholder="insira seu nome aqui">
-<h2>email</h2>
-<input type="email" placeholder="insira o email">
+<h2>insira sua formação:</h2>
+<input type="text" placeholder="insira sua formação aqui">
+<h2>fale sobre você</h2>
+<input type="text" placeholder="insira uma descrição sua">
+<h2>insira suas experiências profissionais</h2>
+<input type="text" placeholder="insira suas experiências aqui">
 </section>
+<hr>
+<button type="submit" ([click])></button>
