--- a/src/app/views/inicio/inicio.component.html
+++ b/src/app/views/inicio/inicio.component.html
@@ -1,5 +1,7 @@
 <p>Bem vindo ao  acervio de curriculos</p>
 <section>
     <h1>Cadrastrar um curriculo </h1>
-    <button [(click)]></button>
+    <button [(click)] href="curriculos"></button>
+    <h1>cadastrar um perfil</h1>
+    
 </section>
